--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -53,8 +53,7 @@
         <div class="btn-toolbar float-right" role="toolbar">
           <div class="">
             <button ng-click="addCustomeRoute()" type="button" class="btn btn-terniary fa-search-custom"
-              style="float: right; background-color: #384266;">Add Custom
-              Route</button>
+              style="float: right; background-color: #384266;">ADD CUSTOM ROUTE</button>
           </div>
         </div>
 
@@ -309,6 +308,7 @@
               <div class="col-md-12">
                 <div ng-dropdown-multiselect="" class="form-control" options="EmpList" selected-model="SelectedEmp "
                   checkboxes="true" extra-settings="example14settings" validation="required"
+                  search-placeholder="   Search Employee's    "
                   validation-result="SelectedEmp">
                 </div>
               </div>
