Customize on site page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -866,6 +866,7 @@
     .card_flex .fa{font-size: 26px;}
     .card_flex h5{font-size: 16px;font-weight: 600;padding-left: 7px;}
     .edit-buttons{float: right;}
+    .siteFieldsHide{display: none;}
     
     
   
