--- a/app/views/sites/_form.html.slim
+++ b/app/views/sites/_form.html.slim
@@ -1,110 +1,112 @@
 div#site_html
     .row
-      .col-md-4.no-margin
-        label.site_labels for="siteName"
-          |Site Name*    
-        input#siteName[class="form-control" type="text" name="siteName" value="" required= "true"]
-      /!
+      .col-md-12
+        .div[style="border: 1px solid #8d8e90;display: inline-block;margin-top: 20px;padding-top: 10px;padding-bottom: 20px;"] 
+          .col-md-12[style="font-size: medium;text-align: center;padding: 10px;font-weight: bold;"] 
+              | Primary Details
           .col-md-4.no-margin
+            label.site_labels for="siteName"
+              |Site Name*    
+            input#siteName[class="form-control" type="text" name="siteName" value="" required= "true"]
+          .col-md-4.no-margin.siteFieldsHide
             label.site_labels for="phone"
               | Phone    
             input#phone[class="form-control" type="text" name="phone" value=""]      
-      .col-md-4.no-margin
-        label.site_labels for="company"
-          | Company    
-        select.form-control#company required="true"
-          option [value="0"] 
-            | Choose Company    
-      /!
-        .col-md-4.no-margin
-          label.site_labels for="address"
-            | Address
-          input#address[class="form-control" type="text" name="address" value=""]
-        .col-md-4.no-margin
-          label.site_labels for="admin_name"
-            | Adminname
-          input#admin_name[class="form-control" type="text" name="admin_name" value=""]
-        .col-md-4.no-margin
-          label.site_labels for="admin_email_id"
-            | Admin email id
-          input#admin_email_id[class="form-control" type="text" name="admin_email_id" value=""]
-      .col-md-4.no-margin
-        label.site_labels for="site_code"
-          /! | site_code
+          .col-md-4.no-margin
+            label.site_labels for="company"
+              | Company*    
+            select.form-control#company required="true"
+              option [value="0"] 
+              | Choose Company    
+          .col-md-4.no-margin
+            label.site_labels for="address"
+              | Address*
+            input#address[class="form-control" type="text" name="address" value=""]
+          .col-md-4.no-margin.siteFieldsHide
+            label.site_labels for="admin_name"
+              | Adminname
+            input#admin_name[class="form-control" type="text" name="admin_name" value=""]
+          .col-md-4.no-margin.siteFieldsHide
+            label.site_labels for="admin_email_id"
+              | Admin email id
+            input#admin_email_id[class="form-control" type="text" name="admin_email_id" value=""]
+          .col-md-4.no-margin.siteFieldsHide
+            label.site_labels for="site_code"
+              | site_code
             input#site_code[class="form-control" type="text" name="site_code" value=""]
           .col-md-4.no-margin
-        label.site_labels for="branch_name"
-          | Branch Name
-          <!--  input#branch_name[class="form-control" type="text" name="branch_name" value=""] -->
-        select.form-control#city
-          option [value="0"]
-            | Choose Branch
-      .col-md-4.no-margin
-        label.site_labels for="contact_name"
-          | Contact Name*
-        input#contact_name[class="form-control" type="text" name="contact_name" value="" required="true"]
-      .col-md-4.no-margin
-        label.site_labels for="address_1"
-          | Address Line 1*
-        input#address_1[class="form-control" type="text" name="address_1" value="" required="true"]
-      .col-md-4.no-margin
-        label.site_labels for="address_2"
-          | Address Line 2*
-        input#address_2[class="form-control" type="text" name="address_2" value="" required="true"]
-      .col-md-4.no-margin
-        label.site_labels for="address_3"
-          | Address Line 3
-        input#address_3[class="form-control" type="text" name="address_3" value=""]
-      .col-md-4.no-margin
-        label.site_labels for="pin"
-          | Pincode*
-        input#pin[class="form-control" type="text" name="pin" value="" required="true"]
-      .col-md-4.no-margin
-        label.site_labels for="state"
-          | State*    
-        select.form-control#state required="true"
-          option [value="0"]
-            | Choose State
-      .col-md-4.no-margin
-        label.site_labels for="city" required="true"
-          | City*    
-        select.form-control#city
-          option [value="0"]
-            | Choose City
-      .col-md-4.no-margin
-        label.site_labels for="phone_1"
-          | Phone_1*
-        input#phone_1[class="form-control" type="text" name="phone_1" value="" required="true"]
-      .col-md-4.no-margin
-        label.site_labels for="phone_2"
-          | Phone_2
-        input#phone_2[class="form-control" type="text" name="phone_2" value=""]
-      .col-md-4.no-margin
-        label.site_labels for="pan_no"
-          | Pan No*
-        input#pan_no[class="form-control" type="text" name="pan_no" value="" required="true"]
-      .col-md-4.no-margin
-        label.site_labels for="business_area"
-          | Business Area    
-        select.form-control#business_area
-          option [value="0"]
-            | Choose Business Area
-      .col-md-4.no-margin
-        label.site_labels for="gstin_no"
-          | gstin_no
-        input#gstin_no[class="form-control" type="text" name="gstin_no" value=""]
-      .col-md-4.no-margin
-        label.site_labels for="cost_centre"
-          | cost_centre
-        input#cost_centre[class="form-control" type="text" name="cost_centre" value=""]
-      .col-md-4.no-margin
-        label.site_labels for="profit_centre"
-          | profit_centre
-        input#profit_centre[class="form-control" type="text" name="profit_centre" value=""]
-      .col-md-4.no-margin
-        label.site_labels for="gl_acc_no"
-          | gl_acc_no
-        input#gl_acc_no[class="form-control" type="text" name="gl_acc_no" value=""]
+            label.site_labels for="branch_name"
+              | Branch Name
+              <!--  input#branch_name[class="form-control" type="text" name="branch_name" value=""] -->
+            select.form-control#city
+              option [value="0"]
+                | Choose Branch
+          .col-md-4.no-margin
+            label.site_labels for="contact_name"
+              | Contact Name*
+            input#contact_name[class="form-control" type="text" name="contact_name" value="" required="true"]
+          .col-md-4.no-margin
+            label.site_labels for="address_1"
+              | Address Line 1*
+            input#address_1[class="form-control" type="text" name="address_1" value="" required="true"]
+          .col-md-4.no-margin
+            label.site_labels for="address_2"
+              | Address Line 2*
+            input#address_2[class="form-control" type="text" name="address_2" value="" required="true"]
+          .col-md-4.no-margin
+            label.site_labels for="address_3"
+              | Address Line 3
+            input#address_3[class="form-control" type="text" name="address_3" value=""]
+          .col-md-4.no-margin
+            label.site_labels for="pin"
+              | Pincode*
+            input#pin[class="form-control" type="text" name="pin" value="" required="true"]
+          .col-md-4.no-margin
+            label.site_labels for="state"
+              | State*    
+            select.form-control#state required="true"
+              option [value="0"]
+                | Choose State
+          .col-md-4.no-margin
+            label.site_labels for="city" required="true"
+              | City*    
+            select.form-control#city
+              option [value="0"]
+                | Choose City
+          .col-md-4.no-margin
+            label.site_labels for="phone_1"
+              | Phone 1*
+            input#phone_1[class="form-control" type="number" name="phone_1" value="" required="true"]
+          .col-md-4.no-margin
+            label.site_labels for="phone_2"
+              | Phone 2
+            input#phone_2[class="form-control" type="text" name="phone_2" value=""]
+          .col-md-4.no-margin
+            label.site_labels for="pan_no"
+              | Pan No*
+            input#pan_no[class="form-control" type="text" name="pan_no" value="" required="true"]
+          .col-md-4.no-margin
+            label.site_labels for="business_area"
+              | Business Area    
+            select.form-control#business_area
+              option [value="0"]
+                | Choose Business Area
+          .col-md-4.no-margin
+            label.site_labels for="gstin_no"
+              | gstin no
+            input#gstin_no[class="form-control" type="text" name="gstin_no" value=""]
+          .col-md-4.no-margin
+            label.site_labels for="cost_centre"
+              | cost centre
+            input#cost_centre[class="form-control" type="text" name="cost_centre" value=""]
+          .col-md-4.no-margin
+            label.site_labels for="profit_centre"
+              | profit centre
+            input#profit_centre[class="form-control" type="text" name="profit_centre" value=""]
+          .col-md-4.no-margin
+            label.site_labels for="gl_acc_no"
+              | gl acc no
+            input#gl_acc_no[class="form-control" type="text" name="gl_acc_no" value=""]
     
     .row
       .col-md-12
@@ -113,28 +115,34 @@ div#site_html
               | Party Details
           .col-md-4.no-margin
             label.site_labels for="party_code"
-              | party_code
+              | party code
             input#party_code[class="form-control" type="text" name="party_code" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_contact_name"
-              | party_contact_name
+              | party contact name
             input#party_contact_name[class="form-control" type="text" name="party_contact_name" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_address_1"
-              | party_address_1
+              | party address 1
             input#party_address_1[class="form-control" type="text" name="party_address_1" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_address_3"
-              | party_address_3
+              | party address 3
             input#party_address_3[class="form-control" type="text" name="party_address_3" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_address_2"
-              | party_address_2
+              | party address 2
             input#party_address_2[class="form-control" type="text" name="party_address_2" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_pin"
               | Party pin
             input#party_pin[class="form-control" type="text" name="party_pin" value=""]
+          .col-md-4.no-margin
+            label.site_labels for="party_state"
+              |Party State    
+            select.form-control#party_state
+              option [value="0"]
+                | Choose Party State 
           .col-md-4.no-margin
             label.site_labels for="party_city"
               | Party City    
@@ -142,22 +150,16 @@ div#site_html
               option [value="0"]
                 | Choose City
           .col-md-4.no-margin
-            label.site_labels for="party_state"
-              |Party State    
-            select.form-control#party_state
-              option [value="0"]
-                | Choose Party State
-          .col-md-4.no-margin
             label.site_labels for="party_phone_1"
-              | Party phone_1
+              | Party phone 1
             input#party_phone_1[class="form-control" type="text" name="party_phone_1" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_phone_2"
-              | Party phone_2
+              | Party phone 2
             input#party_phone_2[class="form-control" type="text" name="party_phone_2" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_business_area"
-              |Party City    
+              |Party business area    
             select.form-control#party_business_area
               option [value="0"]
                 | Choose party business area
