--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -865,7 +865,10 @@
     .card_flex img{width: 100%;}
     .card_flex .fa{font-size: 26px;}
     .card_flex h5{font-size: 16px;font-weight: 600;padding-left: 7px;}
-
+    .ml_selec{width:100% !important;}
+    .ml_selec > .multiselect-parent{width: 100% !important;}
+    .ml_selec > .multiselect-parent > .dropdown-toggle{width:100%;text-align: left;}
+    .ml_selec > .multiselect-parent > .dropdown-toggle > .caret{ float: right;position: relative;top:10px;}
 
     
     
