--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -306,7 +306,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-                <div ng-dropdown-multiselect="" class="form-control" options="EmpList" selected-model="SelectedEmp "
+                <div ng-dropdown-multiselect="" class="form-control ml_selec" options="EmpList" selected-model="SelectedEmp "
                   checkboxes="true" extra-settings="example14settings" validation="required"
                   search-placeholder="   Search Employee's    "
                   validation-result="SelectedEmp">
