--- a/app/views/sites/_form.html.slim
+++ b/app/views/sites/_form.html.slim
@@ -17,7 +17,17 @@ div#site_html
               | Company*    
             select.form-control#company required="true"
               option [value="0"] 
-              | Choose Company    
+              | Choose Company  
+          .col-md-4.no-margin
+            label.site_labels for="contact_name"
+              | Contact Name*
+            input#contact_name[class="form-control" type="text" name="contact_name" value="" required="true"]    
+          .col-md-4.no-margin
+            label.site_labels for="branch_name"
+              | Branch Name    
+            select.form-control#branch_name
+              option [value="0"]
+                | Choose Branch
           .col-md-4.no-margin
             label.site_labels for="address"
               | Address*
@@ -34,17 +44,6 @@ div#site_html
             label.site_labels for="site_code"
               | site_code
             input#site_code[class="form-control" type="text" name="site_code" value=""]
-          .col-md-4.no-margin
-            label.site_labels for="branch_name"
-              | Branch Name
-              <!--  input#branch_name[class="form-control" type="text" name="branch_name" value=""] -->
-            select.form-control#city
-              option [value="0"]
-                | Choose Branch
-          .col-md-4.no-margin
-            label.site_labels for="contact_name"
-              | Contact Name*
-            input#contact_name[class="form-control" type="text" name="contact_name" value="" required="true"]
           .col-md-4.no-margin
             label.site_labels for="address_1"
               | Address Line 1*
@@ -83,7 +82,7 @@ div#site_html
             input#phone_2[class="form-control" type="text" name="phone_2" value=""]
           .col-md-4.no-margin
             label.site_labels for="pan_no"
-              | Pan No*
+              | PAN No*
             input#pan_no[class="form-control" type="text" name="pan_no" value="" required="true"]
           .col-md-4.no-margin
             label.site_labels for="business_area"
@@ -93,19 +92,19 @@ div#site_html
                 | Choose Business Area
           .col-md-4.no-margin
             label.site_labels for="gstin_no"
-              | gstin no
+              | GSTIN No
             input#gstin_no[class="form-control" type="text" name="gstin_no" value=""]
           .col-md-4.no-margin
             label.site_labels for="cost_centre"
-              | cost centre
+              | Cost Centre
             input#cost_centre[class="form-control" type="text" name="cost_centre" value=""]
           .col-md-4.no-margin
             label.site_labels for="profit_centre"
-              | profit centre
+              | Profit Centre
             input#profit_centre[class="form-control" type="text" name="profit_centre" value=""]
           .col-md-4.no-margin
             label.site_labels for="gl_acc_no"
-              | gl acc no
+              | GL Acc No
             input#gl_acc_no[class="form-control" type="text" name="gl_acc_no" value=""]
     
     .row
@@ -115,62 +114,62 @@ div#site_html
               | Party Details
           .col-md-4.no-margin
             label.site_labels for="party_code"
-              | party code
+              | Party Code
             input#party_code[class="form-control" type="text" name="party_code" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_contact_name"
-              | party contact name
+              | Party Contact Name
             input#party_contact_name[class="form-control" type="text" name="party_contact_name" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_address_1"
-              | party address 1
+              | Party Address 1
             input#party_address_1[class="form-control" type="text" name="party_address_1" value=""]
           .col-md-4.no-margin
-            label.site_labels for="party_address_3"
-              | party address 3
-            input#party_address_3[class="form-control" type="text" name="party_address_3" value=""]
-          .col-md-4.no-margin
             label.site_labels for="party_address_2"
-              | party address 2
+              | Party Address 2
             input#party_address_2[class="form-control" type="text" name="party_address_2" value=""]
           .col-md-4.no-margin
+            label.site_labels for="party_address_3"
+              | Party Address 3
+            input#party_address_3[class="form-control" type="text" name="party_address_3" value=""]
+          .col-md-4.no-margin
             label.site_labels for="party_pin"
-              | Party pin
+              | Pincode
             input#party_pin[class="form-control" type="text" name="party_pin" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_state"
-              |Party State    
+              | State    
             select.form-control#party_state
               option [value="0"]
                 | Choose Party State 
           .col-md-4.no-margin
             label.site_labels for="party_city"
-              | Party City    
+              | City    
             select.form-control#party_city
               option [value="0"]
                 | Choose City
           .col-md-4.no-margin
             label.site_labels for="party_phone_1"
-              | Party phone 1
+              | Phone 1
             input#party_phone_1[class="form-control" type="text" name="party_phone_1" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_phone_2"
-              | Party phone 2
+              | Phone 2
             input#party_phone_2[class="form-control" type="text" name="party_phone_2" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_business_area"
-              |Party business area    
+              | Business Area    
             select.form-control#party_business_area
               option [value="0"]
                 | Choose party business area
           .col-md-4.no-margin
             label.site_labels for="party_pan_no"
-              | Party pan no
+              | PAN No
             input#party_pan_no[class="form-control" type="text" name="party_pan_no" value=""]
           .col-md-4.no-margin
             label.site_labels for="party_gstin_no"
               | 
-              Party gstin no
+               GSTIN No
             input#party_gstin_no[class="form-control" type="text" name="party_gstin_no" value=""]
 
       /!
