--- a/app/views/configurators/angular_views/_add_zone.html
+++ b/app/views/configurators/angular_views/_add_zone.html
@@ -1,4 +1,5 @@
-<form name="form" ng-submit="submitZone(form.$valid)" novalidate ng-controller='addZone'>
+<form name="form"  novalidate ng-controller='addZone'>
+        <!-- ng-submit="submitZone(form.$valid)" -->
     <div class="tab-content-area ">
         <div class="tab-content">
             <div class="row ">
