--- a/app/views/operators/_form.html.slim
+++ b/app/views/operators/_form.html.slim
@@ -10,7 +10,7 @@
     .row
       .col-md-4.col-md-offset-4
         = f.input :email, label: 'Email', required: true
-      -if current_user.admin?
+      -if current_user
         .col-md-4
           = ui.association :logistics_company, label: 'Company', prompt: false, input_html: {class: 'selectboxit', :'placeholder' => 'Choose company'}, required: true
     .row
