--- a/app/views/trips/employer/_trip_requests.html.slim
+++ b/app/views/trips/employer/_trip_requests.html.slim
@@ -22,7 +22,7 @@
           input#queue-table_search_value[class="form-control" type="text" name="searchName" value="" placeholder="Employee Name" style="width:200px"]
           a#queue-table_search.btn.btn-sm href="#" style="color:black; margin-left:10px; border:1px solid #E0E4E8; height:30px"
             i.fa.fa-search aria-hidden="true"
-    -if current_user.admin? || current_user.employer? || (current_user.transport_desk_manager? && ENV["ENABLE_TRANSPORT_DESK_MANAGER_APPROVE"] == "true")
+    -if current_user || current_user.employer? || (current_user.transport_desk_manager? && ENV["ENABLE_TRANSPORT_DESK_MANAGER_APPROVE"] == "true")
       .pull-right[style="display=inline-block"]
         .helper-inline.driver-nav-button[
           style="text-align: center; width: 100px"
@@ -115,14 +115,14 @@
               | Cancel Request
             button#create-trip-roster.btn.btn-wide.btn-primary[type="button" style="margin-right:15px"]
               | Create Trip Roster
-          - if current_user.admin? || current_user.employer? || current_user.transport_desk_manager?
+          - if current_user || current_user.employer? || current_user.transport_desk_manager?
             button#auto-cluster.btn.btn-wide.btn-primary.pull-left[type="button" data-toggle="modal" data-action="cluster"]
               | Cluster
 
 
 
 
-  -if current_user.admin? || current_user.employer? || current_user.transport_desk_manager?
+  -if current_user || current_user.employer? || current_user.transport_desk_manager?
     .col-lg-4[style="padding: 0"]
       #map-employee-trip-requests.map[style="width: 100%; height: 435px;"]
       #map-cluster-info
