--- a/app/views/trips/show.js.slim
+++ b/app/views/trips/show.js.slim
@@ -1,4 +1,4 @@
--if !@trip.book_ola.blank? && (@trip.status != 'completed' && @trip.status != 'canceled') && (current_user.operator? || current_user.admin?)
+-if !@trip.book_ola.blank? && (@trip.status != 'completed' && @trip.status != 'canceled') && (current_user.operator? || current_user)
 	| $("#m-operator-book-ola-uber").html('');
 	| $("#m-operator-book-ola-uber").html('
 	= j render :partial => 'trips/modals/book_ola_uber',:locals => {:trip => @trip, :driver_id => @driver_id, :employee_trips => @employee_trips, :show_cost => true}
