--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -190,8 +190,36 @@
 }
 
 .vayau-routing .employee-cluster-panel .allocated_route {
-  background-color: brown;
+  background-color: #3F968C;
 }
+
+/* .vayau-panel-footer .employee-list-group .employee-list-group-item.vehicle-assign:hover {
+  cursor: pointer;
+}
+
+.vayau-routing .employee-cluster-panel .employee-list-group-item .input-group-addon.addon-prepend {
+  cursor: pointer;
+} */
+
+.vayau-routing .employee-cluster-panel .employee-list-group-item .input-group-addon.addon-prepend .close_button{
+  position: relative; 
+  top: -22px; 
+  left: -6px;  
+  cursor: pointer;
+  z-index: 10;
+  background-color: #6c6c6c; 
+  line-height:2.8em; 
+  width:30px; 
+  display: none;
+}
+
+.vayau-panel-footer .employee-list-group .employee-list-group-item.vehicle-assign:hover .close_button, .close_button:hover{
+  cursor: pointer;
+  display: block;
+  z-index: 14;
+}
+
+
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-body {
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
