--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -212,7 +212,7 @@
                             <div class="col-md-6 pad-right-0">
                               <ul class="employee-list-group" dnd-list="container.vehicle"
                                 dnd-drop="dropVehicleCallback(container,index, item, external, type)"
-                                dnd-allowed-types="allowedVehicalTypes" dnd-disable-if="container.vehicle.length >= 1">
+                                dnd-allowed-types="[container.vehicle_type]" dnd-disable-if="container.vehicle.length >= 1">
                                 <dnd-nodrag>
                                   <li ng-repeat="person in container.vehicle" dnd-type="person.type"
                                     dnd-disable-if="person.type == 'unknown'" dnd-moved="list.vehicle.splice($index, 1)"
@@ -220,7 +220,8 @@
                                     ng-if="container.vehicle.length">
                                     <span class="input-group-addon addon-prepend vehicle_assign">
                                       <div class="inner-addon">
-                                        <i class="fa fa-car"></i>
+                                        <i class="fa fa-car vehicle_button" style="z-index: 8;"></i>
+                                        <i class="fa fa-times close_button" ng-click="removeVehicle(person, container)"></i>
                                       </div>
                                     </span>
 
@@ -492,7 +493,7 @@
 
                 <div class="inner-text">
                   <div class="text-medium"> {{vehical.vehicleNumber}} - <i> (On Duty) </i></div>
-                  <div class="text-big"> {{vehical.model}}</div>
+                  <div class="text-big"> {{vehical.vehicleType}} - {{vehical.model}}</div>
                 </div>
 
                 <div class="input-group-addon addon-append">
