--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -424,7 +424,7 @@
             <div class="row">
               <div class="col-md-10">
                 <h3 class="float-left"><span class="vaayu-sidebar-title">Add Vehicle </span> <span
-                    class="title-caption">(SUV)</span></h3>
+                    class="title-caption"></span></h3>
               </div>
               <div class="col-md-2">
                 <button type="button" ng-click="hideVehicalSidebar()"
@@ -437,7 +437,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <input type="text" class="form-control" ng-model="vehicleModel" placeholder="Find with keyword">
+                  <input type="text" class="form-control" ng-model="vehiclePlateNumber" placeholder="Search Vehicle Plate Number" ng-change="onVehicleSearch(vehiclePlateNumber)">
                 </div>
               </div>
             </div>
