--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -437,7 +437,10 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <input type="text" class="form-control" ng-model="vehiclePlateNumber" placeholder="Search Vehicle Plate Number" ng-change="onVehicleSearch(vehiclePlateNumber)">
+                  <input type="text" class="form-control" 
+                  ng-model="plateNumber" 
+                  focus-me="focusInput"
+                  placeholder="Search Vehicle Plate Number" ng-change="onVehicleSearch(plateNumber)">
                 </div>
               </div>
             </div>
