Fixed Shift create issue

--- a/app/views/provisioning/_drivers.html.slim
+++ b/app/views/provisioning/_drivers.html.slim
@@ -19,23 +19,17 @@
       thead
         tr
           th
-            | Name
+            | Driver Name
           th
-            | Business Associate
+            | Paired Vehicle
           th
-            | License Number
+            | On duty Status
           th
-            | AADHAAR
+            | Assigned status            
           th
-            | Compliance
+            | Induction status
           th
-            | Status
-          th
-            | Assigned            
-          th
-            | Last Active
-          th
-            | Action
+            | Compliance status
       tbody
 
 #checklist-modal
