Add Block driver

--- a/app/views/provisioning/_drivers.html.slim
+++ b/app/views/provisioning/_drivers.html.slim
@@ -30,6 +30,8 @@
             | Induction status
           th
             | Compliance status
+          th
+            | Blacklisted
       tbody
 
 #checklist-modal
